--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ h2{
 </header>
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="80%">
+    <img src="baner1.gif" alt="baner" width=80% height=100%>
 </section>
 <aside> 
     <div id="Menu">Menu</div>
