--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ h2{
                 <li><font color="blue"><a href="Bilety.html">Bilety</font></li>     
     </ul>
     <div id="Menu">Sponsorzy</div>
-    <img src="pge.jpg" width="100%" height="10%">
+    <img src="Baner1.gif" alt="baner" width="100%" height="20%">
     <img src="gmina.jpg" width="70%" height="20%">
     <img src="gmina2.jpg" width="100%" height="10%">
     <img src="starostwo.jpg" width="70%" height="17%">
