--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ h2{
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="80%">
     <img src="Baner1.gif" alt="baner" width="40%" height="40%">
+    <img src="palaye.png" alt="palaye" width="60%">
 </section>
 <aside> 
     <div id="Menu">Menu</div>
