--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ h2{
 </header>
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="80%">
+    <img src="palaye.PNG" alt="palaye" width="60%" height="40%" onclick="Blety.html">
     <img src="Baner1.gif" alt="baner" width="40%" height="40%">
-    <img src="palaye.PNG" alt="palaye" width="60%" height="40%">
 </section>
 <aside> 
     <div id="Menu">Menu</div>
