--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@ aside{
 
 section{
     background-color: cyan;
-    height: 90%;
+    height: 60%;
     width: 90%;
+    float: left;
+    text-align:left;
+    }
+    lewy{
+    background-color: cyan;
+    height: 40%;
+    width: 60%;
+    float: left;
+    text-align:left;
+    }
+    prawy{
+    background-color: cyan;
+    height: 40%;
+    width: 40%;
     float: left;
     text-align:left;
     }
@@ -60,10 +74,11 @@ h2{
 </header>
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="80%">
-    <img src="palaye.PNG" alt="palaye" width="60%" height="40%" onclick="Blety.html">
     <img src="Baner1.gif" alt="baner" width="40%" height="40%">
 </section>
-<aside> 
+<div id="prawy"><img src="palaye.PNG" alt="palaye" width="60%" height="40%"></div>
+    <div id="lewy"><img src="Baner1.gif" alt="baner" width="40%" height="40%"></div>
+    <aside> 
     <div id="Menu">Menu</div>
     <ul type="circle">
 <li><font color="blue"><a href="index.html">Strona główna</font></li>     
