--- a/index.html
+++ b/index.html
@@ -28,17 +28,10 @@ section{
     float: left;
     text-align:left;
     }
-    lewy{
-    background-color: cyan;
-    height: 30%;
-    width: 60%;
-    float: left;
-    text-align:left;
-    }
     prawy{
     background-color: cyan;
-    height: 40%;
-    width: 30%;
+    height: 20%;
+    width: 90%%;
     float: left;
     text-align:left;
     }
@@ -75,8 +68,8 @@ h2{
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="100%">
 </section>
-<div id="prawy"><img src="palaye.PNG" alt="palaye" width="80%" height="20%"></div>
-    <div id="lewy"><img src="Baner1.gif" alt="baner" width="80%" height="40%"></div>
+<div id="prawy"><img src="palaye.PNG" alt="palaye" width="90%" height="20%"></div>
+
     <aside> 
     <div id="Menu">Menu</div>
     <ul type="circle">
