--- a/index.html
+++ b/index.html
@@ -27,14 +27,6 @@ section{
     width: 90%;
     float: left;
     text-align:left;
-    }
-    prawy{
-    background-color: cyan;
-    height: 20%;
-    width: 90%%;
-    float: left;
-    text-align:left;
-    }
 h1{
     text-align: center;
     text-transform: uppercase;
@@ -67,9 +59,8 @@ h2{
 </header>
 <section>
     <img src="festiwal1.jpg" alt="Festiwal1" width="100%" height="100%">
+    <img src="palaye.PNG" alt="palaye" width="90%" height="20%">
 </section>
-<div id="prawy"><img src="palaye.PNG" alt="palaye" width="90%" height="20%"></div>
-
     <aside> 
     <div id="Menu">Menu</div>
     <ul type="circle">
