--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h2{
 <li><font color="blue"><a href="index.html">Strona główna</font></li>     
      <li><font color="blue"><a href="Historia festiwalu.html">Historia festiwalu </font></li>
         <li><font color="blue"><a href="Popredni festiwal.html">Poprzedni festiwal</font></li>
-            <li><font color="blue"><a href="line-up.html">Line-up</font></li>
+            <li><font color="blue"><a href="reklama.html">Line-up</font></li>
                 <li><font color="blue"><a href="Bilety.html">Bilety</font></li>     
     </ul>
     <div id="Menu">Sponsorzy</div>
