--- a/reklama.html
+++ b/reklama.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <img  src="Baner1.gif" alt="gif">
-    <button onclick="line-up.html">Przejdź dalej</button>
+    <a href="line-up.html">>
+Przejdź dalej
+  </button>
+</a>
 </body>
 </html>
