--- a/reklama.html
+++ b/reklama.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <img  src="Baner1.gif" alt="gif">
-    <a href="line-up.html">>
+    <a href="line-up.html">
+ <button>
 Przejdź dalej
   </button>
 </a>
