--- a/reklama.html
+++ b/reklama.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body background color="cyan">
     <img  src="Baner1.gif" alt="gif">
     <a href="line-up.html">
  <button>
